--- a/www.nass.gov.ng/e2ab8e802b0136c2e0b601e90c4dbdd3d5a5a499.yml
+++ b/www.nass.gov.ng/e2ab8e802b0136c2e0b601e90c4dbdd3d5a5a499.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:30:11 GMT
+    - Sun, 19 Aug 2018 08:12:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-%2CV64kJXqySMZviEvTZx21; path=/
+    - PHPSESSID=%2COeBhexn47HOqq1jaSUDg2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:30:12 GMT
+recorded_at: Sun, 19 Aug 2018 08:12:07 GMT
