--- a/www.nass.gov.ng/a1b6a895194ee1db2324d6cd7be0e38230956b82.yml
+++ b/www.nass.gov.ng/a1b6a895194ee1db2324d6cd7be0e38230956b82.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:31:00 GMT
+    - Sun, 19 Aug 2018 08:13:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5lw3j47sBjy6Zzej1Phnt3; path=/
+    - PHPSESSID=7sGWkUb2U5NxP5%2CrEcc%2C63; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:31:00 GMT
+recorded_at: Sun, 19 Aug 2018 08:13:36 GMT
