--- a/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
+++ b/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:32:11 GMT
+    - Sun, 19 Aug 2018 08:14:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CRoNiOrH7QR--A6-sj9lD2; path=/
+    - PHPSESSID=X6v3-kBbpIyPjoc-xjygz0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:32:12 GMT
+recorded_at: Sun, 19 Aug 2018 08:14:38 GMT
