--- a/www.nass.gov.ng/44efa2798b644b9c66241bb91893fde5b3c9a881.yml
+++ b/www.nass.gov.ng/44efa2798b644b9c66241bb91893fde5b3c9a881.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:37:47 GMT
+    - Sun, 19 Aug 2018 08:20:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PKIlwMgG3YNXkLUjB-B9P1; path=/
+    - PHPSESSID=3SVZdKWos%2CWofENc3HMn73; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:37:48 GMT
+recorded_at: Sun, 19 Aug 2018 08:20:20 GMT
