--- a/www.nass.gov.ng/3ceb47421c438620b30672b5fe37b22d6a3c030b.yml
+++ b/www.nass.gov.ng/3ceb47421c438620b30672b5fe37b22d6a3c030b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:43:07 GMT
+    - Sun, 19 Aug 2018 08:27:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j%2CNJV3Sln7WPbi52r5uPZ3; path=/
+    - PHPSESSID=7lDj4EPkXAauPtp39e1B32; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:43:07 GMT
+recorded_at: Sun, 19 Aug 2018 08:27:34 GMT
