--- a/www.nass.gov.ng/9cb9f95b8b58299e0d288da7bd207cb97c5e8706.yml
+++ b/www.nass.gov.ng/9cb9f95b8b58299e0d288da7bd207cb97c5e8706.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:45:33 GMT
+    - Sun, 19 Aug 2018 08:29:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CzlZKNx6rgdbcn4gJDRGO1; path=/
+    - PHPSESSID=K7pLu6IDXxt1ZzkisdIeo3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:45:33 GMT
+recorded_at: Sun, 19 Aug 2018 08:29:54 GMT
