--- a/www.nass.gov.ng/3e78dbe9a24f3256731136acfa86b40f486c11f6.yml
+++ b/www.nass.gov.ng/3e78dbe9a24f3256731136acfa86b40f486c11f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:47:06 GMT
+    - Sun, 19 Aug 2018 08:30:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aaS8MGrVNxrqnW7mBepFn1; path=/
+    - PHPSESSID=ooiccyW%2CKl2PafCqOhZA52; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:47:07 GMT
+recorded_at: Sun, 19 Aug 2018 08:30:42 GMT
