--- a/www.nass.gov.ng/67dd730ff856ea9bb96904fa30ee4e9ee2de60d0.yml
+++ b/www.nass.gov.ng/67dd730ff856ea9bb96904fa30ee4e9ee2de60d0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:59:32 GMT
+    - Sun, 19 Aug 2018 08:46:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5VU0%2CuwDKlst8KaX5Mnxd0; path=/
+    - PHPSESSID=D4uy-SGxzAQbZRFfHMRQw2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:59:32 GMT
+recorded_at: Sun, 19 Aug 2018 08:46:42 GMT
