--- a/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
+++ b/www.nass.gov.ng/62d5139bbef8c034d48ec5dd8c9d9f3548bab7e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 22:26:15 GMT
+    - Sun, 19 Aug 2018 09:11:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XEu2Y3LMbjaNWM2AZIxbJ0; path=/
+    - PHPSESSID=LqFgKJP%2C73xYY5aYsJusr2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 22:26:15 GMT
+recorded_at: Sun, 19 Aug 2018 09:11:37 GMT
