--- a/www.nass.gov.ng/c87dc53c6d47627e8026fb21c6b3dd1da0adf76c.yml
+++ b/www.nass.gov.ng/c87dc53c6d47627e8026fb21c6b3dd1da0adf76c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 22:49:46 GMT
+    - Sun, 19 Aug 2018 09:35:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Qp70NlcCvoOfZ-CkpIwZW1; path=/
+    - PHPSESSID=xlvF9FIbCS%2Clx8SiRlxYs3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 22:49:46 GMT
+recorded_at: Sun, 19 Aug 2018 09:35:20 GMT
