--- a/www.nass.gov.ng/4e4db7aedb76fd1aae949e0a6047cb41d8823efb.yml
+++ b/www.nass.gov.ng/4e4db7aedb76fd1aae949e0a6047cb41d8823efb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:04:07 GMT
+    - Sun, 19 Aug 2018 09:50:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZmNEyia3AGhOhBX1P%2CHc51; path=/
+    - PHPSESSID=whMKUc6O7jkwu5DR9rZgJ3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:04:07 GMT
+recorded_at: Sun, 19 Aug 2018 09:50:47 GMT
