--- a/www.nass.gov.ng/88556bd0e840159ac9c15a946a553fec97046a88.yml
+++ b/www.nass.gov.ng/88556bd0e840159ac9c15a946a553fec97046a88.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:20:25 GMT
+    - Sun, 19 Aug 2018 10:05:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=83%2CX78Vinpx4CGbzegUsf2; path=/
+    - PHPSESSID=RMGXARJmZC3OfyP83tLWr1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:20:25 GMT
+recorded_at: Sun, 19 Aug 2018 10:05:08 GMT
