--- a/www.nass.gov.ng/d93cbecb9a07a670e71c8d9dab949aa1a9cc4575.yml
+++ b/www.nass.gov.ng/d93cbecb9a07a670e71c8d9dab949aa1a9cc4575.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:25:03 GMT
+    - Sun, 19 Aug 2018 10:08:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9zkhSyztEXs28dIPg-Uys1; path=/
+    - PHPSESSID=pW54Kl2Fuozjf%2C1SYvn5%2C3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:25:03 GMT
+recorded_at: Sun, 19 Aug 2018 10:08:35 GMT
