--- a/www.nass.gov.ng/58460865385611fe3978b3319b94e554cc6b1c23.yml
+++ b/www.nass.gov.ng/58460865385611fe3978b3319b94e554cc6b1c23.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:31:56 GMT
+    - Sun, 19 Aug 2018 10:15:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jfxNh5lXmJ7-O6ufbb9%2Cu2; path=/
+    - PHPSESSID=3REikjIhStCIg1rpLuGAL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:31:56 GMT
+recorded_at: Sun, 19 Aug 2018 10:15:17 GMT
