--- a/www.nass.gov.ng/6362bf0b264c101faa86bccf8a95eacd55ff0e0b.yml
+++ b/www.nass.gov.ng/6362bf0b264c101faa86bccf8a95eacd55ff0e0b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:34:25 GMT
+    - Sun, 19 Aug 2018 10:17:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ch8aUY59%2Cei1apz2CO9qf2; path=/
+    - PHPSESSID=R70drxhW%2C-Ut1dUIQR8Jb1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:34:25 GMT
+recorded_at: Sun, 19 Aug 2018 10:17:19 GMT
