--- a/www.nass.gov.ng/54619da91f49e918d36405986489133b0bdc63e5.yml
+++ b/www.nass.gov.ng/54619da91f49e918d36405986489133b0bdc63e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:38:53 GMT
+    - Sun, 19 Aug 2018 10:21:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H3ICEl-cHNnxH%2CCIntANm3; path=/
+    - PHPSESSID=CTYuJ3EKXQs3VkCJEOqGz3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:38:53 GMT
+recorded_at: Sun, 19 Aug 2018 10:21:17 GMT
