--- a/www.nass.gov.ng/983e68ad26808b89ed6efb1a6d811b0405986a23.yml
+++ b/www.nass.gov.ng/983e68ad26808b89ed6efb1a6d811b0405986a23.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:44:54 GMT
+    - Sun, 19 Aug 2018 10:24:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mvxuv7-w9TPF9lNsntj1u0; path=/
+    - PHPSESSID=4su5Fm8Fc3CHQr%2CVOIs6E0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:44:54 GMT
+recorded_at: Sun, 19 Aug 2018 10:24:50 GMT
