--- a/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
+++ b/www.nass.gov.ng/e8c8853bb750cd38cc6b84c3aaa8947ab9679a39.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:46:10 GMT
+    - Sun, 19 Aug 2018 10:25:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0864RAG%2CplgdHmOZOxaOn1; path=/
+    - PHPSESSID=fjlRIGZvqA7JID16eCC252; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:46:11 GMT
+recorded_at: Sun, 19 Aug 2018 10:25:43 GMT
