--- a/www.nass.gov.ng/9990223a8422d479229a7cd427e76d734882b3a3.yml
+++ b/www.nass.gov.ng/9990223a8422d479229a7cd427e76d734882b3a3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:48:18 GMT
+    - Sun, 19 Aug 2018 10:27:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ldV%2Cj7ozL1pzZ8Jsv9lxr2; path=/
+    - PHPSESSID=KAPX6u5SaAxd3m74azBSf1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:48:18 GMT
+recorded_at: Sun, 19 Aug 2018 10:27:27 GMT
