--- a/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
+++ b/www.nass.gov.ng/de5254844cf8d346a1878728cb84aa920a2f7e26.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 23:52:29 GMT
+    - Sun, 19 Aug 2018 10:31:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4ErLLPgG1g%2Cnxr%2Cn0wL5u2; path=/
+    - PHPSESSID=QwzuD2aZYF3Yux0Uqp%2Cp80; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 23:52:29 GMT
+recorded_at: Sun, 19 Aug 2018 10:31:06 GMT
