--- a/www.nass.gov.ng/ec08ea5442077836f0eaa10dce0b9ef3b8daee61.yml
+++ b/www.nass.gov.ng/ec08ea5442077836f0eaa10dce0b9ef3b8daee61.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:11:41 GMT
+    - Sun, 19 Aug 2018 10:46:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2CW9Bglj51qTAaXBUxc8-2; path=/
+    - PHPSESSID=mpufz5%2C0hzBbBm9rHUjCe1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:11:42 GMT
+recorded_at: Sun, 19 Aug 2018 10:46:56 GMT
