--- a/www.nass.gov.ng/7a9c992de87c92f9d2c8b4b2cadc6f35d09abcdc.yml
+++ b/www.nass.gov.ng/7a9c992de87c92f9d2c8b4b2cadc6f35d09abcdc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:12:33 GMT
+    - Sun, 19 Aug 2018 10:48:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bGQpyOuYDCIpl7B6Muoib2; path=/
+    - PHPSESSID=SceFAnwPylwZHviZ%2CiQx12; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:12:33 GMT
+recorded_at: Sun, 19 Aug 2018 10:48:17 GMT
