--- a/www.nass.gov.ng/47a7a61d80908aa31c84ded04b327d728013ba53.yml
+++ b/www.nass.gov.ng/47a7a61d80908aa31c84ded04b327d728013ba53.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:20:26 GMT
+    - Sun, 19 Aug 2018 10:55:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EIj1-gcOSRrgWMQ%2C8IqoU3; path=/
+    - PHPSESSID=NxM-8CGcWzBDPrBCESc222; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:20:26 GMT
+recorded_at: Sun, 19 Aug 2018 10:55:17 GMT
