--- a/www.nass.gov.ng/d2af98f869de32b131eb2c94035ebd4014fff26c.yml
+++ b/www.nass.gov.ng/d2af98f869de32b131eb2c94035ebd4014fff26c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:29:00 GMT
+    - Sun, 19 Aug 2018 11:03:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0XLRr3Y%2CX7l965GVLLa8L2; path=/
+    - PHPSESSID=zpEiz4k-WOnEtHNW0I3ue1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:29:00 GMT
+recorded_at: Sun, 19 Aug 2018 11:04:00 GMT
